[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "class2hw11-bs4"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
pandas = "^1.0"
python = "^3.7"
[tool.poetry.dev-dependencies]
